--- a/index.html
+++ b/index.html
@@ -1,63 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
 <title>PAPERHOUSE INC</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Telegram WebApp -->
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
-<!-- Monetag SDK -->
 <script src="//libtl.com/sdk.js" data-zone="10276123" data-sdk="show_10276123"></script>
 <script src="//libtl.com/sdk.js" data-zone="10337795" data-sdk="show_10337795"></script>
 <script src="//libtl.com/sdk.js" data-zone="10337853" data-sdk="show_10337853"></script>
 
-<script type="module" src="app.js"></script>
-
 <style>
-body { margin:0; font-family:Arial; background:#f5f7fb }
-.header { background:#111; color:#fff; padding:14px; border-radius:0 0 16px 16px }
-.title { font-size:20px; font-weight:bold }
-.user { font-size:14px; margin-top:4px }
-.balance { margin-top:6px; font-weight:bold }
-.container { padding:14px }
-.card { background:#fff; padding:14px; border-radius:14px; margin-bottom:12px; box-shadow:0 2px 8px rgba(0,0,0,.08) }
-button { width:100%; padding:12px; border:none; border-radius:12px; font-weight:bold; margin-top:8px; cursor:pointer }
-.main { background:#ffb703 }
-.sub { background:#90dbf4 }
-.danger { background:#ef233c; color:#fff }
-.hidden { display:none }
-input { width:100%; padding:10px; border-radius:10px; border:1px solid #ccc; margin-top:8px }
+body{margin:0;font-family:Arial;background:#f5f7fa}
+.header{background:#111;color:#fff;padding:12px;text-align:center}
+.balance{font-size:14px;margin-top:4px}
+.container{padding:12px}
+button{width:100%;padding:10px;margin:6px 0;border:none;border-radius:8px;font-weight:bold}
+.card{background:#fff;padding:10px;border-radius:10px;margin-bottom:8px}
+.hidden{display:none}
 </style>
 </head>
 
 <body>
 
 <div class="header">
-  <div class="title">📄 PAPERHOUSE INC</div>
-  <div id="userBar" class="user"></div>
+  <h2>PAPERHOUSE INC</h2>
+  <div id="userBar"></div>
   <div id="balanceBar" class="balance"></div>
 </div>
 
 <div class="container">
 
-  <div class="card">
-    <button class="main" onclick="openPage('ads')">🍍 ADS AREA 🍍</button>
-    <button class="sub" onclick="openPage('signin')">🍍 Paper house Sign In 🍍</button>
-    <button class="sub" onclick="openPage('gift')">🍍 Paper house Gift 🍍</button>
-  </div>
+<button onclick="openPage('ads')">🍍 ADS AREA 🍍</button>
+<button onclick="openPage('signin')">🍍 Paper House Sign In 🍍</button>
+<button onclick="openPage('gift')">🍍 Paper House Gift 🍍</button>
+<button onclick="openPage('withdraw')">💸 Withdraw</button>
+<button onclick="openPage('owner')">🔐 Owner Dashboard</button>
 
-  <div class="card">
-    <button class="danger" onclick="openPage('withdraw')">💸 Withdraw your Money here</button>
-  </div>
+<div id="page-ads" class="hidden"></div>
+<div id="page-signin" class="hidden"></div>
+<div id="page-gift" class="hidden"></div>
+<div id="page-withdraw" class="hidden"></div>
 
-  <div id="page-ads" class="card hidden"></div>
-  <div id="page-signin" class="card hidden"></div>
-  <div id="page-gift" class="card hidden"></div>
-  <div id="page-withdraw" class="card hidden"></div>
-  <div id="page-owner" class="card hidden"></div>
+<div id="page-owner" class="hidden">
+  <h3>Owner Dashboard</h3>
+  <div id="ownerLogin">
+    <input id="ownerPass" type="password" placeholder="Password">
+    <button onclick="ownerLogin()">Login</button>
+  </div>
+  <div id="ownerPanel" class="hidden">
+    <div id="ownerTotal"></div>
+    <div id="ownerList"></div>
+    <div id="ownerPager"></div>
+  </div>
+</div>
 
 </div>
+
+<script type="module" src="app.js"></script>
 </body>
 </html>
