--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <title>PAPERHOUSE INC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Telegram -->
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
-<!-- Monetag -->
-<script src="//libtl.com/sdk.js" data-zone="10276123" data-sdk="show_10276123"></script>
-<script src="//libtl.com/sdk.js" data-zone="10337795" data-sdk="show_10337795"></script>
-<script src="//libtl.com/sdk.js" data-zone="10337853" data-sdk="show_10337853"></script>
-
-<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
+<script async src="//libtl.com/sdk.js" data-zone="10276123" data-sdk="show_10276123"></script>
+<script async src="//libtl.com/sdk.js" data-zone="10337795" data-sdk="show_10337795"></script>
+<script async src="//libtl.com/sdk.js" data-zone="10337853" data-sdk="show_10337853"></script>
+
 <style>
+*{touch-action:manipulation}
 body{margin:0;font-family:Arial;background:#f4f6f9}
 .header{background:#111;color:#fff;padding:12px;text-align:center}
 .container{padding:12px}
-button{width:100%;padding:12px;margin:6px 0;border:none;border-radius:10px;font-weight:bold}
+button{width:100%;padding:14px;margin:6px 0;border:none;border-radius:10px;font-weight:bold;background:#ffcc00;position:relative;z-index:5}
 .card{background:#fff;padding:10px;border-radius:10px;margin-bottom:8px}
+.navbtn{width:48%;display:inline-block}
 .hidden{display:none}
 </style>
 </head>
@@ -36,31 +35,39 @@ button{width:100%;padding:12px;margin:6px 0;border:none;border-radius:10px;font-
 </div>
 
 <div class="container">
-
-<button onclick="openPage('ads')">🍍 ADS AREA 🍍</button>
-<button onclick="openPage('signin')">🍍 Paper House Sign In 🍍</button>
-<button onclick="openPage('gift')">🍍 Paper House Gift 🍍</button>
-<button onclick="openPage('withdraw')">💸 Withdraw</button>
-<button onclick="openPage('owner')">🔐 Owner Dashboard</button>
+<button onclick="openPage('ads')">🍍 ADS</button>
+<button onclick="openPage('signin')">🍍 SIGN IN</button>
+<button onclick="openPage('gift')">🎁 GIFTS</button>
+<button onclick="openPage('withdraw')">💸 WITHDRAW</button>
+<button onclick="openPage('owner')">🔐 OWNER</button>
 
 <div id="page-ads" class="hidden"></div>
 <div id="page-signin" class="hidden"></div>
 <div id="page-gift" class="hidden"></div>
-<div id="page-withdraw" class="hidden"></div>
+
+<div id="page-withdraw" class="hidden">
+  <button onclick="withdraw()">Withdraw All</button>
+  <div id="userHistory"></div>
+  <div>
+    <button class="navbtn" onclick="userPrev()">⬅ Prev</button>
+    <button class="navbtn" onclick="userNext()">Next ➡</button>
+  </div>
+  <div id="userPage"></div>
+</div>
 
 <div id="page-owner" class="hidden">
-  <h3>Owner Dashboard</h3>
-  <div id="ownerLoginBox">
-    <input id="ownerPass" type="password" placeholder="Password">
-    <button onclick="ownerLogin()">Login</button>
-  </div>
+  <input id="ownerPass" type="password" placeholder="Owner Password">
+  <button onclick="ownerLogin()">Login</button>
   <div id="ownerPanel" class="hidden">
     <div id="ownerTotal"></div>
     <div id="ownerList"></div>
-    <div id="ownerPager"></div>
+    <div>
+      <button class="navbtn" onclick="ownerPrev()">⬅ Prev</button>
+      <button class="navbtn" onclick="ownerNext()">Next ➡</button>
+    </div>
+    <div id="ownerPage"></div>
   </div>
 </div>
-
 </div>
 
 <script src="app.js"></script>
