--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@ iframe{pointer-events:auto !important;z-index:9999}
 <div id="page-ads" class="page"></div>
 <div id="page-signin" class="page"></div>
 <div id="page-gift" class="page"></div>
-<div id="page-withdraw" class="page"></div>
+<div id="page-withdraw" class="page">
+  <h3>Withdraw</h3>
+  <button id="withdrawBtn">Withdraw All</button>
+  <div id="withdrawTable"></div>
+  <div id="withdrawPager"></div>
+</div>
 
 <div id="page-owner" class="page">
   <h3>Owner Dashboard</h3>
