--- a/index.html
+++ b/index.html
@@ -11,37 +11,14 @@
 <script src="//libtl.com/sdk.js" data-zone="10337853" data-sdk="show_10337853"></script>
 
 <style>
-body{
-  margin:0;
-  font-family:Arial;
-  background:#f5f7fa;
-  touch-action:manipulation;
-}
-.header{
-  background:#111;
-  color:#fff;
-  padding:12px;
-  text-align:center;
-}
-.container{padding:12px}
-
-button{
-  width:100%;
-  padding:12px;
-  margin:6px 0;
-  border:none;
-  border-radius:10px;
-  font-weight:bold;
-  cursor:pointer;
-  pointer-events:auto !important;
-  -webkit-tap-highlight-color:transparent;
-}
-
+body{margin:0;font-family:Arial;background:#f5f7fa;touch-action:manipulation;}
+.header{background:#111;color:#fff;padding:12px;text-align:center;}
+.container{padding:12px;}
+button{width:100%;padding:12px;margin:6px 0;border:none;border-radius:10px;font-weight:bold;cursor:pointer;pointer-events:auto !important;-webkit-tap-highlight-color:transparent;}
 .page{display:none}
 table{width:100%;border-collapse:collapse;margin-top:8px}
 th,td{border:1px solid #ccc;padding:6px;font-size:13px;text-align:center}
 th{background:#eee}
-iframe{pointer-events:auto !important;z-index:9999}
 </style>
 </head>
 
@@ -54,19 +31,22 @@ iframe{pointer-events:auto !important;z-index:9999}
 </div>
 
 <div class="container">
-
 <button onclick="openPage('ads')">🍍 ADS AREA</button>
 <button onclick="openPage('signin')">🍍 SIGN IN</button>
 <button onclick="openPage('gift')">🍍 GIFTS</button>
-<button onclick="openPage('withdraw')">💸 Withdraw</button>
+<button onclick="openPage('withdraw')">💸 Withdrawal History</button>
 <button onclick="openPage('owner')">🔐 Owner Dashboard</button>
 
 <div id="page-ads" class="page"></div>
 <div id="page-signin" class="page"></div>
 <div id="page-gift" class="page"></div>
 <div id="page-withdraw" class="page">
-  <h3>Withdraw</h3>
-  <button id="withdrawBtn">Withdraw All</button>
+  <h3>Withdrawal History</h3>
+  <div>
+    <input id="gcash" placeholder="Enter GCash Number">
+    <input id="withdrawAmount" type="number" placeholder="Amount to withdraw" step="0.01">
+    <button id="requestWithdrawal">Request Withdrawal</button>
+  </div>
   <div id="withdrawTable"></div>
   <div id="withdrawPager"></div>
 </div>
@@ -81,7 +61,6 @@ iframe{pointer-events:auto !important;z-index:9999}
     <div id="ownerPager"></div>
   </div>
 </div>
-
 </div>
 
 <script type="module" src="app.js"></script>
